# libre-engine

./: .gitignore  CMakeLists.Txt  CMakeLists.txt  GameState.hpp  README.md
Editor/Libre-Editor/: .gitignore  Libre-Editor.pro
Editor/build-Libre-Editor-Desktop-Debug/: Libre-Editor  Makefile  moc_mainwindow.cpp
Editor/build-Libre-Editor-Qt_5_3_2_qt5-Debug/: Libre-Editor  Makefile  moc_mainwindow.cpp  moc_projectcreategui.cpp  moc_scripteditor.cpp  moc_shadereditor.cpp  moc_tilemapeditor.cpp  ui_mainwindow.h  ui_projectcreategui.h  ui_scripteditor.h  ui_shadereditor.h  ui_tilemapeditor.h
Sandbox/: EngineLog.txt  Makefile  Test  main.cpp  main.cpp.autosave
build-scripts/: clean.sh  getCereal.sh  removeCereal.sh  uninstall.sh
docs/: LibreEngineDesignDoc  TODO
include/: Application.h  Application.hpp  BaseState.hpp  DefaultState.hpp  ShaderProgram.h
include/asset/: Base_Asset.hpp  Image.hpp
include/assets/: Base_Asset.hpp  Image.hpp
include/core/: Component.hpp  ComponentList.hpp  Engine.hpp  Entity.hpp  Entity_impl.hpp  GameState.h  LEVariant.hpp  System.hpp  Transform.h  cameracomponent.hpp  renderingsystem.hpp  scene.hpp  spritecomponent.hpp  transformcomponent.hpp
include/graphics/: Camera.hpp  Renderer.hpp  Renderer.hpp.ik1752  Shader.hpp  ShaderProgram.h  ShaderProgram.hpp  ShaderVariable.hpp  Tile.h  Tile.hpp  Tilesheet.hpp  Window.hpp  graphics_common.hpp  graphics_common.hpp.autosave  mesh.hpp  oglObject.h  oglObject.hpp
include/math/: SIMDArray.hpp  coordinate2D.hpp  libremath.hpp  matrix2.hpp  matrix2.hpp.gch  matrix3.hpp  matrix4.hpp  vector2.hpp  vector3.hpp  vector3.hpp.gch  vector4.hpp
include/physics/: aabb.hpp  ray.hpp  rectangle.hpp
include/script/: Script.hpp  ScriptEngine.hpp
include/system/: Buffer.hpp  BufferElement.hpp  BufferLayout.hpp  ComputerDetails.hpp  IndexBuffer.h  IndexBuffer.hpp  Keyboard.h  Keyboard.hpp  Logger.hpp  Mouse.h  Mouse.hpp  OpenGL.hpp  Task.hpp  Task.hpp.autosave  Time.hpp  Utility.hpp  VertexArray.hpp  VertexFormat.h
shaders/fragment/: basic.frag  basic_es.fsh
shaders/vertex/: basic.vert  basic_es.vsh
src/: Application.cpp  CMakeLists.txt  DefaultState.cpp  ShaderVariable.cpp
src/asset/: Image.cpp
src/core/: CMakeLists.txt  Engine.cpp  cameracomponent.cpp  renderingsystem.cpp  scene.cpp  spritecomponent.cpp  transformcomponent.cpp
src/graphics/: CMakeLists.txt  Camera.cpp  Renderer.cpp  Shader.cpp  Tile.cpp  (+5 more)
src/system/: Buffer.cpp  BufferLayout.cpp  CMakeLists.txt  ComputerDetails.cpp  IndexBuffer.cpp  Keyboard.cpp  Logger.cpp  Mouse.cpp  OpenGL.cpp  Task.cpp  Time.cpp  Utility.cpp  VertexArray.cpp
src/system/fformats/: objformat.cpp
(+30 files in other folders)
